<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RegisterTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">用户名:</string>
    <string name="psd">密码:</string>
    <string name="psd2">确认密码:</string>
    <string name="gender">性别:</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="thishi01">不能为空</string>
    <string name="city">所在地</string>
    <string name="register">注册</string>
    <string name="title">欢迎注册</string>
    <string name="result">注册结果</string>
    <string name="result_title">恭喜你，注册成功</string>
    <string name="result_name">您的用户名为：</string>
    <string name="result_psd">您的密码为：</string>
    <string name="result_gender">您的性别为：</string>
    <string name="result_city">您所在地为：</string>
    <string name="select">选择城市</string>
    

</resources>