<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_marginLeft="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textColor="#ff0000"
        android:textSize="24sp"/>
      <TableRow>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/name"
           android:textSize="20sp"/>
       <EditText
           android:id="@+id/name"
           android:layout_width="150dp"
           android:layout_height="wrap_content"/>
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/thishi01"
           android:textColor="#ff0000"
           android:textSize="16sp"/>
      </TableRow>
      <TableRow>
          <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/psd"
           android:textSize="20sp"/>
       <EditText
           android:id="@+id/psd"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:inputType="textPassword"/>
      </TableRow>
      <TableRow>
          <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/psd2"
           android:textSize="20sp"/>
       <EditText
           android:id="@+id/psd2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:inputType="textPassword"/>
      </TableRow>
      <TableRow>
          <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/gender"
           android:textSize="20sp"/>
          <RadioGroup
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
              <RadioButton 
           android:id="@+id/male"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/male"
           android:textSize="20sp"/>
              <RadioButton 
           android:id="@+id/female"      
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/female"
           android:textSize="20sp"/>
          </RadioGroup>
      </TableRow>"
       <TableRow >
           <Button
           android:id="@+id/cityBtn"      
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/city"
           android:textSize="20sp"/>
           <EditText
               android:id="@+id/city"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>             
       </TableRow>
       <Button 
           android:id="@+id/registerBtn"      
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/register"
           android:textSize="20sp"/>
</TableLayout>